--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rollup": "^4.22.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
